Add BodyText component to render text content from Contentful
Replace text in our-story.mdx with Contentful source.
Add Public Sans font and use it for the body text.
Add gatsby-browser.js to import the custom font.
Make all p elements 1.25rem by default.
Use the primary color for text.

--- a/src/pages/our-story.mdx
+++ b/src/pages/our-story.mdx
@@ -3,16 +3,13 @@ title: Our Story
 ---
 
 import Callout from "@/components/Callout";
+import BodyText from "@/components/BodyText";
 import Team from "@/components/Team";
 
 
 # Our Story
 
-Our team was formed in February 2020 when Niels Tangherlini, EMS Operations Chief with the SFFD, reached out to Code for SF to help solve a problem he’d encountered for many years: how to help ambulances direct non-critical patients to EDs with the most availability.
-
-Since then, we’ve worked closely with the SFFD, as well as nurses, administrators, and IT departments from local hospitals to develop an working prototype of the platform.
-
-Today, we’re preparing to beta test the tool in the city of San Francisco.
+<BodyText name="ourStory" />
 
 <Callout
 	heading="Curious how RoutED could help your city?"
@@ -22,7 +19,7 @@ Today, we’re preparing to beta test the tool in the city of San Francisco.
 
 ## Meet the Team
 
-Our all-volunteer team includes software engineers, data analysts, full-stack developers, and designers, with experience in patient health care records, hospitality, government services, and logistics.
+<BodyText name="meetTheTeam" />
 
 <Team />
 
