Add toggle buttons to FAQs
Update FAQ query to handle there being multiple lists now.
Add a glossary of terms and Glossary.js to render it.
Use Heading component in team cards.
Make the p font larger and the line height smaller.

--- a/src/pages/faq.mdx
+++ b/src/pages/faq.mdx
@@ -3,8 +3,14 @@ title: FAQ
 ---
 
 import FAQList from "@/components/FAQList";
+import Glossary from "@/components/Glossary";
 
 
 # Frequently Asked Questions
 
 <FAQList />
+
+
+# Glossay of Terms
+
+<Glossary />
