--- a/src/pages/our-story.mdx
+++ b/src/pages/our-story.mdx
@@ -7,17 +7,14 @@ import BodyText from "@/components/BodyText";
 import Team from "@/components/Team";
 
 
-# Our Story
-
 <BodyText name="ourStory" />
 
 <Callout
 	heading="Curious how RoutED could help your city?"
 	cta="Contact Us"
+	ctaLink="contact"
 />
 
-
-# Meet the Team
 
 <BodyText name="meetTheTeam" />
 
@@ -27,4 +24,5 @@ import Team from "@/components/Team";
 	heading="Interested in volunteering?"
 	subheading="Join our Code for America meetup group on Wednesdays at 6:30pm (Pacific)"
 	cta="Learn More"
+	ctaLink="volunteer"
 />
