Create guide home page in gatsby-node.js
Pass the guide body to UserGuideDisplay.
Import user-guides.mdx as a component to export from UserGuidePage.

--- a/src/pages/user-guides.mdx
+++ b/src/pages/user-guides.mdx
@@ -10,4 +10,6 @@ import UserGuideDisplay from "@/components/UserGuide/UserGuideDisplay";
 ## Follow the step-by-step instructions below to get started with your RoutED account.
 
 
-<UserGuideDisplay />
+<UserGuideDisplay
+	{...props.pageContext.guide}
+/>
