Move creation of guideIndex to gatsby-node.js
Pass guideIndex into UserGuideDisplay.

--- a/src/pages/user-guides.mdx
+++ b/src/pages/user-guides.mdx
@@ -11,5 +11,6 @@ import UserGuideDisplay from "@/components/UserGuide/UserGuideDisplay";
 
 
 <UserGuideDisplay
-	{...props.pageContext.guide}
+	guide={props.pageContext.guide}
+	guideIndex={props.pageContext.guideIndex}
 />
