Dynamically create pages for user guides
Highlight User Guides in header whenever the user is on a guide sub-page.
Add gatsby-node.js and UserGuide/UserGuidePage.js.
Add userGuidePath.js to share creation of guide paths.
Move user-guides.mdx to src/templates, so it won't get automatically built and there aren't warnings about /user-guides/ being an existing page.
Get rid of state in UserGuideDisplay.
Rename gatsby-* files to have .ts extension, which enables ESM imports in the configs.
Rename DefaultLayout to Layout.
Update README.md.

--- a/src/templates/user-guides.mdx
+++ b/src/templates/user-guides.mdx
@@ -10,4 +10,7 @@ import UserGuideDisplay from "@/components/UserGuide/UserGuideDisplay";
 ## Follow the step-by-step instructions below to get started with your RoutED account.
 
 
-<UserGuideDisplay />
+<UserGuideDisplay
+	guide={props.pageContext.guide}
+	guideIndex={props.pageContext.guideIndex}
+/>
