Update theme to use latest designs and spacing
Add named spacing tokens, with negative versions.
Move max-width to Container component and use it for the in top-level children.
Put page name first in page titles.
Make selected page in header bold again.
Add en as page language.
Add ImageBanner component for tops of pages.
Add header-* images.

--- a/src/pages/faq.mdx
+++ b/src/pages/faq.mdx
@@ -4,6 +4,11 @@ title: FAQ
 
 import FAQList from "@/components/FAQList";
 import Glossary from "@/components/Glossary";
+import ImageBanner from "@/components/ImageBanner";
+import ambulance from "@/images/header-ambulance.jpg";
+
+
+<ImageBanner src={ambulance} />
 
 
 # Frequently Asked Questions
@@ -11,6 +16,6 @@ import Glossary from "@/components/Glossary";
 <FAQList />
 
 
-# Glossay of Terms
+# Glossary of Terms
 
 <Glossary />
