--- a/src/pages/our-story.mdx
+++ b/src/pages/our-story.mdx
@@ -5,6 +5,11 @@ title: Our Story
 import Callout from "@/components/Callout";
 import BodyText from "@/components/BodyText";
 import Team from "@/components/Team";
+import ImageBanner from "@/components/ImageBanner";
+import gg from "@/images/header-golden-gate.jpg";
+
+
+<ImageBanner src={gg} />
 
 
 <BodyText name="ourStory" />
