--- a/src/templates/user-guides.mdx
+++ b/src/templates/user-guides.mdx
@@ -3,6 +3,11 @@ title: User Guides
 ---
 
 import UserGuideDisplay from "@/components/UserGuide/UserGuideDisplay";
+import ImageBanner from "@/components/ImageBanner";
+import syringe from "@/images/header-syringe.jpg";
+
+
+<ImageBanner src={syringe} />
 
 
 # User Guides
