Update team list
Use figure instead of Card components.
Fix teaser styling.
Change to two-letter tokens for spacing.
Remove card styles from theme.

--- a/src/pages/our-story.mdx
+++ b/src/pages/our-story.mdx
@@ -23,6 +23,11 @@ import gg from "@/images/header-golden-gate.jpg";
 
 <BodyText name="meetTheTeam" />
 
+<Callout
+	heading="Meet the team"
+	subheading="Our all-volunteer team includes software engineers, data analysts, full-stack developers, and designers — with experience in patient health care records, hospitality, government services, and logistics."
+/>
+
 <Team />
 
 <Callout
