--- a/src/pages/faq.mdx
+++ b/src/pages/faq.mdx
@@ -4,11 +4,11 @@ title: FAQ
 
 import FAQList from "@/components/FAQList";
 import Glossary from "@/components/Glossary";
-import ImageBanner from "@/components/ImageBanner";
+import HeaderImage from "@/components/HeaderImage";
 import ambulance from "@/images/header-ambulance.jpg";
 
 
-<ImageBanner src={ambulance} />
+<HeaderImage src={ambulance} />
 
 
 # Frequently Asked Questions
