Update user guides page
Use buttons for selecting app.
Float guide list to left of the guide content.
Add some color values.

--- a/src/templates/user-guides.mdx
+++ b/src/templates/user-guides.mdx
@@ -12,7 +12,7 @@ import syringe from "@/images/header-syringe.jpg";
 
 # User Guides
 
-## Follow the step-by-step instructions below to get started with your RoutED account.
+## Follow the step-by-step instructions below to get started with your Routed account.
 
 
 <UserGuideDisplay
