--- a/src/pages/support.mdx
+++ b/src/pages/support.mdx
@@ -2,6 +2,13 @@
 title: Support
 ---
 
+import HeaderImage from "@/components/HeaderImage";
+import laptop from "@/images/header-laptop.jpg";
+
+
+<HeaderImage src={laptop} />
+
+
 # Support
 
 Get some support here!
