--- a/src/pages/home.mdx
+++ b/src/pages/home.mdx
@@ -5,11 +5,15 @@ title: Page
 import { Box, Button, Heading, Image } from "theme-ui";
 import { Feature, Description } from "@/components/Feature";
 import HeaderImage from "@/components/HeaderImage";
+import BlockRow from "@/components/BlockRow";
+import BlockCallout from "@/components/BlockCallout";
 import BodyText from "@/components/BodyText";
 import TextBanner from "@/components/TextBanner";
 import hand from "@/images/header-hand.jpg";
 import productEMT from "@/images/product-emt.jpg";
 import HospitalsImage from "@/images/for-hospitals.png";
+import speed from "@/images/icon-speed-dark-gradient.png";
+import location from "@/images/icon-location-dark-gradient.png";
 
 
 <HeaderImage
@@ -36,11 +40,38 @@ import HospitalsImage from "@/images/for-hospitals.png";
 	</Box>
 </HeaderImage>
 
+
 # Problem
 
-<p sx={{ fontWeight: "bold", fontSize: "2.5rem" }}>
+<p sx={{ fontWeight: "bold", fontSize: "banner" }}>
 	EMT and ER wait times have increased significantly over the years — compromising the care and lives of patients.
 </p>
+
+
+<BlockRow sx={{ mt: "xl" }}>
+	<BlockCallout icon={speed}>
+		<Box
+			sx={{
+				fontSize: "banner",
+				fontWeight: "bold",
+				mb: "md"
+		}}>
+			ER wait times in SF range from 2 to 4.5 hours
+		</Box>
+	</BlockCallout>
+	<BlockCallout icon={location}>
+		<Box
+			sx={{
+				// fontSize: "banner",
+				fontWeight: "bold",
+				mb: "md"
+		}}>
+			<p>Ambulance unit and staff that are delayed in the ED are effectively out of service, decreasing advanced life support coverage in the community.</p>
+			<p>California Hospital Association, 2014</p>
+		</Box>
+	</BlockCallout>
+</BlockRow>
+
 
 <BodyText
 	name="mission"
@@ -50,6 +81,7 @@ import HospitalsImage from "@/images/for-hospitals.png";
 		mb: 0
 	}}
 />
+
 
 <Feature>
 	<Description sx={{ alignItems: "self-end", textAlign: "right", pl: "lg" }}>
