Update theme to use latest designs and spacing
Use Links for selecting user guide.
Add named spacing tokens, with negative versions.
Move max-width to Container component and use it for the in top-level children.
Use figure instead of Card components in team list.
Fix teaser styling.
Remove card styles from theme.
Put page name first in page titles.
Make selected page in header bold again.
Add en as page language.
Add ImageBanner component for tops of pages.
Add header-* images.
Scale the icons in BlockCallout to the width and hide overflow.
Add SVGs for home page callout images.
Add TextBanner, BlockRow and BlockCallout components.
Add button hover and active states.
Add square callouts to home and our story pages.
Make Callout blue and stacked vertically.
Add spot icons with gradient borders.
Add image to Support page.
Use buttons for selecting app.
Float guide list to left of the guide content.
Add some color values.
Add "mission" BodyText.
Add gradient underline to h1.
Center team images.
Allow HeaderImage to include children.

--- a/src/pages/home.mdx
+++ b/src/pages/home.mdx
@@ -4,53 +4,99 @@ title: Page
 
 import { Box, Button, Heading, Image } from "theme-ui";
 import { Feature, Description } from "@/components/Feature";
-import AmbulanceImage from "@/images/ambulance.png";
-import EMTsImage from "@/images/for-emts.png";
+import HeaderImage from "@/components/HeaderImage";
+import BlockRow from "@/components/BlockRow";
+import BlockCallout from "@/components/BlockCallout";
+import BodyText from "@/components/BodyText";
+import TextBanner from "@/components/TextBanner";
+import hand from "@/images/header-hand.jpg";
+import productEMT from "@/images/product-emt.jpg";
 import HospitalsImage from "@/images/for-hospitals.png";
+import speed from "@/images/icon-speed-dark-gradient.png";
+import location from "@/images/icon-location-dark-gradient.png";
+import WaitTimes from "@/images/text-wait-times.svg";
+import Ambulance from "@/images/text-ambulance.svg";
 
-# Welcome to RoutED
+
+<HeaderImage
+	src={hand}
+	height={640}
+>
+	<Box
+		sx={{
+			fontSize: "3.25rem",
+			fontWeight: "bold",
+			lineHeight: 1.2,
+			left: "md",
+			bottom: "md",
+			width: "60%",
+			p: "md",
+			bg: "white",
+			position: "absolute",
+			"& strong": {
+				color: "secondary"
+			}
+		}}
+	>
+		Directing patients to the <strong>most available</strong> care.
+	</Box>
+</HeaderImage>
+
+
+# Problem
+
+<p sx={{ fontWeight: "bold", fontSize: "banner" }}>
+	EMT and ER wait times have increased significantly over the years — compromising the care and lives of patients.
+</p>
+
+
+<BlockRow sx={{ mt: "xl" }}>
+	<BlockCallout icon={speed}>
+		<WaitTimes sx={{ width: "100%" }} />
+	</BlockCallout>
+	<BlockCallout icon={location}>
+		<Ambulance sx={{ width: "100%" }} />
+	</BlockCallout>
+</BlockRow>
+
+
+<BodyText
+	name="mission"
+	Container={TextBanner}
+	sx={{
+		mt: "xl",
+		mb: 0
+	}}
+/>
+
 
 <Feature>
-	<Description>
-		<Heading>
-			Directing patients to the most available care.
-		</Heading>
-		<Box sx={{ fontSize: "1.25rem" }}>
-			Lorem ipsum
-		</Box>
-	</Description>
-	<Image src={AmbulanceImage} />
-</Feature>
-
-<Feature>
-	<Description>
-		<Heading>
+	<Description sx={{ alignItems: "self-end", textAlign: "right", pl: "lg" }}>
+		<Heading variant="headingFeature">
 			For EMTs
 		</Heading>
-		<Box sx={{ fontSize: "1.25rem" }}>
+		<Box>
 			Know what emergency departments have open beds.
 		</Box>
 		<Button
-			sx={{ mt: 16 }}
 			onClick={() => window.location.href = "user-guides"}
 		>
 			View EMT User Guide
 		</Button>
 	</Description>
-	<Image src={EMTsImage} />
+	<Image src={productEMT} />
 </Feature>
 
 <Feature>
 	<Image src={HospitalsImage} />
-	<Description>
-		<Heading>
+	<Description sx={{ pr: "lg" }}>
+		<Heading variant="headingFeature">
 			For Hospitals
 		</Heading>
-		<Box sx={{ fontSize: "1.25rem" }}>
+		<Box>
 			Prepare for incoming patients with digital ringdowns.
 		</Box>
 		<Button
-			sx={{ mt: 16 }}
 			onClick={() => window.location.href = "user-guides"}
 		>
 			View Hospital User Guide
