--- a/src/pages/faq.mdx
+++ b/src/pages/faq.mdx
@@ -4,6 +4,11 @@ title: FAQ
 
 import FAQList from "@/components/FAQList";
 import Glossary from "@/components/Glossary";
+import HeaderImage from "@/components/HeaderImage";
+import ambulance from "@/images/header-ambulance.jpg";
+
+
+<HeaderImage src={ambulance} />
 
 
 # Frequently Asked Questions
@@ -11,6 +16,6 @@ import Glossary from "@/components/Glossary";
 <FAQList />
 
 
-# Glossay of Terms
+# Glossary of Terms
 
 <Glossary />
