--- a/src/templates/user-guides.mdx
+++ b/src/templates/user-guides.mdx
@@ -3,11 +3,16 @@ title: User Guides
 ---
 
 import UserGuideDisplay from "@/components/UserGuide/UserGuideDisplay";
+import HeaderImage from "@/components/HeaderImage";
+import syringe from "@/images/header-syringe.jpg";
+
+
+<HeaderImage src={syringe} />
 
 
 # User Guides
 
-## Follow the step-by-step instructions below to get started with your RoutED account.
+## Follow the step-by-step instructions below to get started with your Routed account.
 
 
 <UserGuideDisplay
