Add text banner and callout to bottom of home page

--- a/src/pages/home.mdx
+++ b/src/pages/home.mdx
@@ -3,7 +3,7 @@ title: Page
 ---
 
 import { navigate } from "gatsby";
-import { Box, Button, Heading, Image } from "theme-ui";
+import { Box, Button, Heading, Image, Text } from "theme-ui";
 import { Feature, Description } from "@/components/Feature";
 import HeaderImage from "@/components/HeaderImage";
 import BlockRow from "@/components/BlockRow";
@@ -100,3 +100,18 @@ import Ambulance from "@/images/text-ambulance.svg";
 		</Button>
 	</Description>
 </Feature>
+
+
+<TextBanner>
+	<p>Routed helps emergency medical personnel offer better patient care.</p>
+</TextBanner>
+
+<BlockRow>
+	<Box />
+	<Text>
+		Routed brings the communication pipeline between EMTs and emergency staff
+		into the 21st century, providing in-bound transports with access to optimal
+		care options and hospitals with better patient data to prepare them ahead
+		of arrival.
+	</Text>
+</BlockRow>
