Enable linking to /user-guides/ems or /hospital
Use the page title in og:title.
Rename image imports.
Don't inline the SVGs unless they have a .inline.svg extension.

--- a/src/pages/faq.mdx
+++ b/src/pages/faq.mdx
@@ -5,10 +5,10 @@ title: FAQ
 import FAQList from "@/components/FAQList";
 import Glossary from "@/components/Glossary";
 import HeaderImage from "@/components/HeaderImage";
-import ambulance from "@/images/header-ambulance.jpg";
+import ambulanceImage from "@/images/header-ambulance.jpg";
 
 
-<HeaderImage src={ambulance} />
+<HeaderImage src={ambulanceImage} />
 
 
 # Frequently Asked Questions
