--- a/src/pages/our-story.mdx
+++ b/src/pages/our-story.mdx
@@ -10,19 +10,19 @@ import BodyText from "@/components/BodyText";
 import Team from "@/components/Team";
 import HeaderImage from "@/components/HeaderImage";
 import TextBanner from "@/components/TextBanner";
-import gg from "@/images/header-golden-gate.jpg";
-import health from "@/images/icon-health-dark-gradient.png";
-import foot from "@/images/callout-foot.jpg";
+import goldenGateImage from "@/images/header-golden-gate.jpg";
+import footImage from "@/images/callout-foot.jpg";
+import healthIcon from "@/images/icon-health-dark-gradient.png";
 
 
-<HeaderImage src={gg} />
+<HeaderImage src={goldenGateImage} />
 
 
 <BodyText name="ourStory" />
 
 <BlockRow>
-	<Image src={foot} />
-	<BlockCallout icon={health}>
+	<Image src={footImage} />
+	<BlockCallout icon={healthIcon}>
 		<Box
 			sx={{
 				fontSize: "banner",
