--- a/src/pages/support.mdx
+++ b/src/pages/support.mdx
@@ -3,10 +3,10 @@ title: Support
 ---
 
 import HeaderImage from "@/components/HeaderImage";
-import laptop from "@/images/header-laptop.jpg";
+import laptopImage from "@/images/header-laptop.jpg";
 
 
-<HeaderImage src={laptop} />
+<HeaderImage src={laptopImage} />
 
 
 # Support
