--- a/src/templates/user-guides.mdx
+++ b/src/templates/user-guides.mdx
@@ -4,10 +4,10 @@ title: User Guides
 
 import UserGuideDisplay from "@/components/UserGuide/UserGuideDisplay";
 import HeaderImage from "@/components/HeaderImage";
-import syringe from "@/images/header-syringe.jpg";
+import syringeImage from "@/images/header-syringe.jpg";
 
 
-<HeaderImage src={syringe} />
+<HeaderImage src={syringeImage} />
 
 
 # User Guides
